[package]
name = "sim2d"
version = "0.1.0"
authors = ["Bradley Lyman <lyman.brad3211@gmail.com>"]
edition = "2018"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1               # Use slightly better optimizations

[dependencies]
anyhow = { version = "*", features = ["std"] }
flexi_logger = { version = "*", features = ["async"] }
log = "*"
regex = "*"
ash = "*"
indoc = "*"

[build-dependencies]
anyhow = "*"
glob = "*"

[dependencies.glfw]
version = "*"
features = [ "vulkan" ]

[dependencies.textwrap]
features = ["terminal_size"]
version = "*"
